--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "aws-amplify": "^3.3.25",
-    "better-docs": "^2.3.2",
+    "better-docs": "^1.2.2",
     "history": "^5.0.0",
     "jsdoc": "^3.6.6",
     "react": "^17.0.1",
@@ -42,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^6.8.0"
   }
 }
