--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "better-docs": "^1.2.2",
     "history": "^5.0.0",
     "jsdoc": "^3.6.6",
+    "npx": "^10.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^6.0.0-beta.0",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.9.5",
-    "cypress": "^6.8.0"
+    "cypress": "^6.9.1",
+    "nyc": "^15.1.0"
   }
 }
